--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -30,5 +30,6 @@ jobs:
         run: |
           python main.py
         env:
-          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+          API_ID: ${{ secrets.API_ID }}
+          API_HASH: ${{ secrets.API_HASH }}
 
