--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -32,4 +32,5 @@ jobs:
         env:
           API_ID: ${{ secrets.API_ID }}
           API_HASH: ${{ secrets.API_HASH }}
+          SESSION_STRING: ${{ secrets.SESSION_STRING }}
 
