--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -16,10 +16,10 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install FFmpeg
-        run: |
-          sudo apt update
-          sudo apt install -y ffmpeg
+      - name: Setup FFmpeg
+        uses: FedericoCarboni/setup-ffmpeg@v3
+        with:
+          ffmpeg-version: release
 
       - name: Install Python dependencies
         run: |
