--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -16,11 +16,11 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Setup FFmpeg
-        uses: FedericoCarboni/setup-ffmpeg@v3
-        with:
-          ffmpeg-version: release
-
+      - name: Install FFmpeg
+        run: |
+           sudo apt update
+           sudo apt install -y ffmpeg
+           
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
