--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -16,6 +16,10 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Install FFmpeg
+         run: |
+            sudo apt install -y ffmpeg
+
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
