--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -17,8 +17,7 @@ jobs:
           python-version: '3.10'
 
       - name: Install FFmpeg
-         run: |
-            sudo apt install -y ffmpeg
+         run: sudo apt install -y ffmpeg
 
       - name: Install Python dependencies
         run: |
