--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -17,8 +17,10 @@ jobs:
           python-version: '3.10'
 
       - name: Install FFmpeg
-         run: sudo apt install -y ffmpeg
-
+        run: |
+           sudo apt update
+           sudo apt install -y ffmpeg
+           
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
@@ -31,4 +33,3 @@ jobs:
           API_ID: ${{ secrets.API_ID }}
           API_HASH: ${{ secrets.API_HASH }}
           SESSION_STRING: ${{ secrets.SESSION_STRING }}
-
