--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Run Bot
         run: |
-          python recovery.py
+          python main.py
         env:
           API_ID: ${{ secrets.API_ID }}
           API_HASH: ${{ secrets.API_HASH }}
